Fixes and warning removal